2.3.10 (September 30, 2025) ------------------ - Fix: Top sub-menu dropdown toggle button position on mobile - Fix: Admin main menu on mobile

--- a/themes/Clean/scss/humhub/_topbar.scss
+++ b/themes/Clean/scss/humhub/_topbar.scss
@@ -125,6 +125,8 @@
 
         #top-menu-nav {
             justify-content: var(--hh-ct-top-menu-nav-justify-content);
+            height: var(--hh-ct-top-bar-height);
+            overflow: hidden; // Will become visible for the dropdown menu via JS
         }
 
         .notifications {
